z-index border heading issue fixed

--- a/src/scss/components/_common.scss
+++ b/src/scss/components/_common.scss
@@ -25,7 +25,7 @@
   border-bottom: 1px solid rgba($brown, 0.5);
   position: relative;
   margin-bottom: 30px;
-  z-index: -1;
+//   z-index: -1;
   &::after {
     content: "";
     position: absolute;
